--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <main >
   <section class="presentacion align-items-stretch">
     <div class=" presentacion-principal d-flex flex-column justify-content-center align-items-center">
-        <img class="presentacion-img-propia" src="/imgs/MyOficialPic.png" alt="Foto De M.Riche" >
+        <img class="presentacion-img-propia" src="./imgs/MyOficialPic.png" alt="Foto De M.Riche" >
         <h1> Hola, Soy Mateo Riche.</h1>
         <h2> <span class="effect">Y Soy  <p> Desarrollador Web.</p> </span></h2>
 
