--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mateo Riche</title>
   <link rel="stylesheet" type="text/css" href="Portfolio.css">
-  <link rel="icon" type="image/png" href="/imgs/Logo.png" />
+  <link rel="icon" type="image/png" href="./imgs/Logo.png" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
