--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
   <div class="icons d-flex flex-wrap align-items-stretch justify-content-center ">
     <a href="https://www.instagram.com/mateerr_/" target="_blank"><i class="bi bi-instagram"></i></a>
     <a href="mailto:mateogriche@gmail.com" target="_blank"><i class="bi bi-envelope-at-fill"></i></a>
+    <a href="https://github.com/mateerr" target="_blank"><i class="bi bi-github"></i></i></a>
   </div>
  
 </footer>
